unpackaged/main/default/objects/Activity/fields/Call_Answered__c.field-meta.xml
<CustomField>
    <fullName>Call_Answered__c</fullName>
    <description>Was the call answered?</description>
    <label>Call Answered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>