unpackaged/main/default/objects/Activity/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Call Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>- Choose a call result -</fullName>
                <default>true</default>
                <label>- Choose a call result -</label>
            </value>
            <value>
                <fullName>Busy Signal</fullName>
            </value>
            <value>
                <fullName>Person Answered</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>