unpackaged/main/default/objects/Activity/fields/SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message__c</fullName>
    <description>Mockup of SMS message sent to Consumer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS Message</label>
    <length>140</length>
    <type>Text</type>
</CustomField>